Uso de useState para modificar el estado de un elemento

--- a/projects/00-hola-mundo/src/App.css
+++ b/projects/00-hola-mundo/src/App.css
@@ -40,9 +40,9 @@
 }
 
 .tw-followCard-button.is-following{
-    border: 1px solid red;
+    border: 1px solid  #a12d2d;
 }
 
 .tw-followCard-button.is-following:hover{
-    background-color: red;
+    background-color: #c22323;
 }
